9 0 fix